added script filters cards

--- a/source/index.html
+++ b/source/index.html
@@ -65,17 +65,11 @@
       <div class="container">
         <h2 class="reproduction__title">Репродукции</h2>
         <ul class="reproduction__countries">
-          <li class="reproduction__name-country reproduction__name-country--active">
-            <p>Франция</p>
-          </li>
-          <li class="reproduction__name-country">
-            <p>Германия</p>
-          </li>
-          <li class="reproduction__name-country">
-            <p>Англия</p>
-          </li>
+          <li class="reproduction__name-country reproduction__name-country--active" data-id="France">Франция</li>
+          <li class="reproduction__name-country" data-id="Germany">Германия</li>
+          <li class="reproduction__name-country" data-id="England">Англия</li>
         </ul>
-        <ul class="reproduction__list">
+        <ul class="reproduction__list France">
           <li class="reproduction__card card">
             <img class="card__image" src="images/art-hunting.jpg" width="250" height="250" alt="Мальчик с луком в лесу.">
             <p class="card__author">Марсель Руссо</p>
@@ -122,6 +116,106 @@
             <h3 class="card__name">Пейзаж с рыбой</h3>
             <p class="card__info">Цветная литография (40х60)</p>
             <p class="card__price">20 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+        </ul>
+        <ul class="reproduction__list Germany">
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-1.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Курт Вернер</p>
+            <h3 class="card__name">Над городом</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">16 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-2.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Макс Рихтер</p>
+            <h3 class="card__name">Птенцы</h3>
+            <p class="card__info">Холст, масло (50х80)</p>
+            <p class="card__price">14 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-3.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Мартин Майер</p>
+            <h3 class="card__name">Среди листьев</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">20 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-4.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Герман Беккер</p>
+            <h3 class="card__name">Яркая птица</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">13 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-5.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Вульф Бауэр</p>
+            <h3 class="card__name">Дятлы</h3>
+            <p class="card__info">Бумага, акрил (50х80)</p>
+            <p class="card__price">20 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-germany-6.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Вальтер Хартманн</p>
+            <h3 class="card__name">Большие воды</h3>
+            <p class="card__info">Бумага, акрил (50х80)</p>
+            <p class="card__price">23 000 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+        </ul>
+        <ul class="reproduction__list England">
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-1.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Пол Смит</p>
+            <h3 class="card__name">Дикий зверь</h3>
+            <p class="card__info">Акварель, бумага (50х80)</p>
+            <p class="card__price">19 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-2.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Джон Уайт</p>
+            <h3 class="card__name">Дикий зверь</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">17 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-3.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Джим Уотсон</p>
+            <h3 class="card__name">Река и горы</h3>
+            <p class="card__info">Акварель, бумага (50х80)</p>
+            <p class="card__price">20 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-4.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Юджин Зиллион</p>
+            <h3 class="card__name">Белый попугай</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">15 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-5.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Эрик Гиллман</p>
+            <h3 class="card__name">Ночная рыба</h3>
+            <p class="card__info">Бумага, акрил (50х80)</p>
+            <p class="card__price">12 500 руб</p>
+            <button class="card__button button button--transparent">В корзину</button>
+          </li>
+          <li class="reproduction__card card">
+            <img class="card__image" src="images/art-england-6.jpg" width="250" height="250" alt="Картина.">
+            <p class="card__author">Альфред Барр</p>
+            <h3 class="card__name">Рыжий кот</h3>
+            <p class="card__info">Цветная литография (40х60)</p>
+            <p class="card__price">21 000 руб</p>
             <button class="card__button button button--transparent">В корзину</button>
           </li>
         </ul>
@@ -208,6 +302,6 @@
       </div>
     </footer>
   </main>
-  <script src="js/burger.js"></script>
+  <script src="js/scripts.js"></script>
 </body>
 </html>
